update chức năng cập nhật profile